# Binance-WS-Latency-Benchmark

./: Cargo.toml  README.md  out.csv
scripts/: plot_latency.py
src/: main.rs
