[package]
name = "binance_ws_latency_benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24" }
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
